# arkiv-cube-3d

./: .dockerignore  .gitignore  Dockerfile  README.md  animate.py  animate2.py  animate3.py  docker-compose.yml  pyproject.toml  start_web.py
.github/workflows/: render.yml  render2.yml
arkiv_cube_3d/: __init__.py  __main__.py  geometry.py  render_cube.py  web_server.py
tests/: test_animate.py  test_animate_script.py  test_cli.py  test_container_files.py  test_geometry.py  test_image_geometry.py  test_web_server.py
