[project]
name = "arkiv-cube-3d"
version = "0.1.0"
description = "Render a 3D orange cube using Blender"
authors = [
    {name = "arkiv"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bpy>=4.3.0",
]

[project.scripts]
render-cube = "arkiv_cube_3d.render_cube:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
