[project]
name = "arkiv-cube-3d"
version = "0.1.0"
description = "Render 3D boxes on a white floor for lighting tests using Blender"
authors = [
    {name = "arkiv"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bpy>=4.3.0",
]

[project.scripts]
render-cube = "arkiv_cube_3d.render_cube:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
